--- a/src/Components/BLOG-MODAL/BlogModal.module.scss
+++ b/src/Components/BLOG-MODAL/BlogModal.module.scss
@@ -16,7 +16,7 @@
   & .modal {
     @include flex();
     background-color: white;
-    height: 100%;
+    // height: 100%;
     padding: 20px;
     // border-radius: 10px;
     max-width: 600px;
@@ -25,8 +25,11 @@
     position: relative;
     left: 50%;
     transform: translate(-50%);
-    & .form {
+    & form {
+      margin: 2px;
+      height: 100%;
       color: $text-color;
+      
     }
 
     & .input-group {
