--- a/src/Pages/BLOG-DETAILS/BlogDetails.module.scss
+++ b/src/Pages/BLOG-DETAILS/BlogDetails.module.scss
@@ -10,6 +10,10 @@
   min-height: 100vh;
   box-sizing: border-box;
 
+  .container {
+    width: 70%;
+  }
+
   .detail-header {
     max-width: 100%;
     width: 100%;
@@ -45,11 +49,40 @@
 
     img {
       max-width: 100%; // Ensure the image scales down
-      height: auto;
-      object-fit: contain;
+      // height: auto;
+      object-fit: cover;
+      aspect-ratio: 3/2;
       border-radius: 10px;
       margin-bottom: 10px;
     }
+
+    .info {
+      width: 100%;
+      @include flex( $jc:space-between);
+      margin-bottom: 1rem;
+      & .info-left {
+        @include flex();
+
+      }
+      & .info-right {
+        @include flex();
+
+      }
+      @media (max-width:821px) {
+        & {
+          @include flex($fd:column);
+        }
+        & .info-left {
+          @include flex($fd:column);
+        }
+        & .info-right {
+          @include flex($fd:column);
+        }
+      }
+      
+    }
+
+    
 
     .content {
       color: $text-color;
@@ -60,7 +93,7 @@
     }
 
     .modal {
-      margin-top: 10px;
+      // margin-top: 10px;
       cursor: pointer;
       font-size: 1.5rem;
       color: $secondary-color;
@@ -85,7 +118,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-top: 10px;
+      // margin-top: 10px;
 
       span {
         margin-left: 5px;
@@ -93,7 +126,8 @@
     }
 
     .views {
-      margin-top: 10px;
+      @include flex($g:5px);
+      // margin-top: 10px;
       color: $text-color;
       font-size: 0.9rem;
     }
@@ -130,3 +164,4 @@
     }
   }
 }
+
