--- a/src/Components/QUILL/QuillEditor.module.scss
+++ b/src/Components/QUILL/QuillEditor.module.scss
@@ -7,7 +7,7 @@
     background-color: white !important;
   }
   
-  .editor .ql-editor {
+  .inner .ql-editor {
     background-color: white !important;
     white-space: pre-wrap; /* Preserves whitespace and wraps text as in a textarea */
     word-wrap: break-word; /* Ensures long words break */
