--- a/src/Components/LOADING/Loading.module.scss
+++ b/src/Components/LOADING/Loading.module.scss
@@ -1,21 +1,16 @@
 @import "../../../scss/abstract/mixins";
 
 .container {
-  // position: absolute; 
-  // top: 0;
-  // left: 0;
-  width: 100vw; 
-  height: 100vh;
+  
+  width: 100%; 
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .main {
-  // top:50%;
-  bottom: 10%;
-  left:50%;
-  transform: translate(-50%, -50%);
+  margin-top: 10rem;
   width: 64px;
   height: 64px;
   display: inline-block;
