--- a/src/Pages/BLOG-DETAILS/BlogDetails.module.scss
+++ b/src/Pages/BLOG-DETAILS/BlogDetails.module.scss
@@ -12,9 +12,11 @@
 
   .container {
     width: 70%;
+    
   }
 
   .detail-header {
+    
     max-width: 100%;
     width: 100%;
     background-color: white;
@@ -34,6 +36,7 @@
     h5,
     h6,
     p {
+      
       display: block; /* Ensure block-level display */
       white-space: normal; /* Allow normal text wrapping */
       overflow-wrap: break-word; /* Break long words if necessary */
@@ -42,6 +45,7 @@
     }
 
     h2 {
+      
       color: $text-color;
       font-size: 2rem;
       margin-bottom: 10px;
@@ -57,6 +61,7 @@
     }
 
     .info {
+      
       width: 100%;
       @include flex( $jc:space-between);
       margin-bottom: 1rem;
@@ -85,6 +90,7 @@
     
 
     .content {
+      
       color: $text-color;
       margin: 10px 0;
       font-size: 1rem;
@@ -93,13 +99,19 @@
     }
 
     .modal {
+      
       // margin-top: 10px;
       cursor: pointer;
       font-size: 1.5rem;
       color: $secondary-color;
     }
 
+    .x {
+      border: 5px solid red;
+    }
+
     .comment {
+      border: 5px solid red;
       width: 100%;
       max-width: 800px;
       // background-color: white ;
@@ -107,16 +119,27 @@
       border-radius: 10px;
       box-shadow: 0 8px 32px 0 rgba(92, 84, 112, 0.37);
       margin-top: 20px;
+    
+      
+    }
+
+    .comments {
+      // height: 250px !important;
+      border: 2px solid red !important;
+      display: flex;
+      justify-content: space-between;
     }
 
 
     .quill {
+      
       width: 100%;
       margin-top: 10px;
       background-color: white ;
     }
 
     .likes {
+      
       display: flex;
       align-items: center;
       justify-content: center;
@@ -136,6 +159,7 @@
   }
 
   .button {
+    
     @include button();
   }
 }
