--- a/src/Pages/BLOG-DETAILS/BlogDetails.module.scss
+++ b/src/Pages/BLOG-DETAILS/BlogDetails.module.scss
@@ -111,7 +111,7 @@
     }
 
     .comment {
-      border: 5px solid red;
+      border: 5px solid #f0d5e9;
       width: 100%;
       max-width: 800px;
       // background-color: white ;
