--- a/src/Components/BLOG-POST/BlogPost.module.scss
+++ b/src/Components/BLOG-POST/BlogPost.module.scss
@@ -12,5 +12,11 @@
  word-break: break-word;
  white-space: normal;
 }
+& img {
+    width: 100%;
+    aspect-ratio: 3/2;
+    object-fit: cover;
+    border-radius: .4rem;
+   }
   
 }
